<resources>
    <string name="app_name">Movies</string>

    <string name="details">Details from movie</string>
    <string name="titlesMovie">Movie name here</string>
    <string name="rating">ratingValue</string>
    <string name="movie_image">movieImage</string>

    <string name="movie_rate">Movie rate</string>
    <string name="movie_title_here">Movie title here</string>
    <string name="sampleDes">description</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="Asc_order">Ascending order</string>
    <string name="Desc_order">Descending order</string>
    <string name="Sort_by">Sort By</string>
    <string name="Movie_title">%s(%s)</string>
    <string name="night_button">night button</string>
    <string name="topic_name">topic name</string>
    <string name="rating_label">Rating</string>
    <string name="realise_label">Realise</string>
    <string name="empty_title">No Results</string>
    <string name="empty_text">Check your internet connection</string>
    <string name="languageSelection">Select language</string>
    <string name="show_favourite">Show favourite</string>
    <string name="select_language">Select language</string>
    <string name="database_empty">Database is empty!</string>

</resources>